# myxmobar

./: CHANGELOG.md  LICENSE  README.md  cabal.project  hls.json  myxmobar.cabal
app/: Main.hs
src/Xmobar/Plugins/Monitors/: MyAlsa.hs  MyVolume.hs
