cabal-version:      3.0
name:               myxmobar
version:            0.1.0.0

license:            MIT
author:             Nikolai Oplachko
maintainer:         magnickolas@gmail.com

library
    exposed-modules:  Xmobar.Plugins.Monitors.MyAlsa
    build-depends:    base ^>=4.16.4.0
                    , xmobar >=0.46
                    , alsa-core >=0.5.0.1
                    , alsa-mixer >=0.3.0
                    , async >=2.2.4
                    , time >=1.11.1.1
                    , directory >=1.3.6.2
                    , process >=1.6.16.0
    hs-source-dirs:   src
    other-modules:    Xmobar.Plugins.Monitors.MyVolume
    default-language: Haskell2010

executable myxmobar
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0
                    , xmobar >=0.46
                    , myxmobar
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -threaded
